# calctype

./: .gitignore  AUTHORS  Makefile  README.md
calctyper/: CMakeLists.txt  README.md
calctyper/src/: config.h  config.h.in  intl.h  logger.cc  logger.h  main.cc  options.cc  options.h
include/: calctype.h
libcalctype/: Makefile  README.md
libcalctype/include/: calctype.h
libcalctype/src/: calctype.c  platform.h
libcalctype/src/prizm/: platform.c
src/: calctype.c  platform.h
src/platform/: prizm.c
